Describe shared behaviors

--- a/examples/illustrations/cryptowallet/src/README.md.in
+++ b/examples/illustrations/cryptowallet/src/README.md.in
@@ -49,20 +49,37 @@ Certain properties of a cryptowallet are frequently-changing features, such as i
 Applying SSN to the Bitcoin address, we assign these class and property descriptions:
 
 * The Bitcoin account, i.e. `drafting:CryptoWallet` is the [feature of interest](https://www.w3.org/TR/vocab-ssn/#SOSAFeatureOfInterest).
-* The account has two [observable properties](https://www.w3.org/TR/vocab-ssn/#SOSAObservableProperty) (among others) we are interested in measuring - the transaction count, and the balance.
+* The account has four [observable properties](https://www.w3.org/TR/vocab-ssn/#SOSAObservableProperty) (among others) we are interested in measuring:
+    - the transaction count
+    - the balance
+    - the total amount of cryptocurrency received
+    - the total amount of cryptocurrency sent
+* Those observable properties can be observed either by a passive mean or active mean.
+    - A passive mean could be reviewing a blockchain summarization, as was done above by reviewing two websites.  These would yield `sosa:Observation` objects.
+    - An active mean could be by transacting with the address, updating the address's values.  In SOSA terms, this would be an [actuation](sosa:Actuation).  Because an actuation is also tied to one observable property, a blockchain transaction enacts one actuation per property.
 
-A representation of the account balance being 0.00069789 BTC at the above-noted time would be as follows.  Note that this representation is scoped to only using concepts from the SSN, SOSA, and QUDT namespaces, plus the extension to QUDT of BTC as a subclass (transitively so) of `qudt:CurrencyUnit`.
+One of the behaviors of block chains is their transactions tend to both be publicly listed, and include account balances.  This is true for Bitcoin transactions once added to the public ledger.  Hence, each transaction in this example serves as both passive and active measurement instruments.
 
-The result of the observation is a QUDT `QuantityValue` representing the balance in Bitcoin.
+A representation of the account balance being 0.00069789 BTC at the above-noted time would be as follows.  Note that this representation is scoped to only using concepts from the SSN, SOSA, and QUDT namespaces, plus the extension to QUDT that adds BTC as an instance of `qudt:CurrencyUnit` (or rather, an instance of a subclass of `qudt:CurrencyUnit`, `drafting:CryptoCurrencyUnit`).
+
+Whether the result of an observation or transaction (or actuation), the result includes a QUDT `QuantityValue` representing the balance in Bitcoin.  This `qudt:QuantityValue` will be associated with the `sosa:Observation`.
 
 ```json
 @CRYPTOWALLET_1HQ3_BALANCE_SSN_RESULT_JSON@
 ```
 
-The observation links the result with `sosa:hasResult`, also linking the ["sensor"](https://www.w3.org/TR/vocab-ssn/#SOSASensor) that made the result with the [property being observed](https://www.w3.org/TR/vocab-ssn/#SOSAobservedProperty).
+Both the observation and actuation link the result with `sosa:hasResult`, also tying in the [property being observed](https://www.w3.org/TR/vocab-ssn/#SOSAobservedProperty), and the ["sensor"](https://www.w3.org/TR/vocab-ssn/#SOSASensor) (for observations) or actuator (for actuations).  The transaction serves as both sensor and actuator.
+
+This snippet shows the transaction enacting a `sosa:Observation`:
 
 ```json
 @CRYPTOWALLET_1HQ3_BALANCE_SSN_OBSERVATION_JSON@
+```
+
+This snippet shows the transaction enacting a `sosa:Actuation`:
+
+```json
+@CRYPTOWALLET_1HQ3_BALANCE_SSN_ACTUATION_JSON@
 ```
 
 The property being observed is the wallet's balance.  In SSN, the minimum type declarations needed to link the wallet balance to the `drafting:CryptoWallet` are as follows:
