Initial SPARQL query for cell site

--- a/examples/illustrations/cell_tower/src/README.md.in
+++ b/examples/illustrations/cell_tower/src/README.md.in
@@ -43,7 +43,12 @@ The location of a Cell Site can change over time when it is moved by a telecommu
 
 ### Query - To which Cell Sites did the Mobile Device connect
 
-To answer the question "Which Cell Site(s) did a given mobile device connect to during the period of interest?" In this example, the result is the connected Cell Site(s) during the specified time period.
+To answer the question "To which Cell Site(s) did a given mobile device with IMSI '1234567890ABCDEF' connect during the period of interest?" In this example, the result is the connected Cell Site(s) during the specified time period.
+
+A SPARQL query can be written as:
+```sparql
+@QUERY_CONNECTED_SITES_SPARQL@
+```
 
 | ?cellSiteIdentifier | ?cellSiteLocationAreaCode |
 | --- | --- |
