Rename cell_tower illustration to cell_site

--- a/examples/illustrations/Makefile
+++ b/examples/illustrations/Makefile
@@ -18,7 +18,7 @@ illustration_dirs := \
   accounts \
   bulk_extractor_forensic_path \
   call_log \
-  cell_tower \
+  cell_site \
   device \
   exif_data \
   file \
