Call rdf-toolkit via pre-commit
References:
* https://github.com/ucoProject/UCO/issues/373

Signed-off-by: Alex Nelson <alexander.nelson@nist.gov>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,3 +9,9 @@ repos:
             - --indent=4
             - --no-ensure-ascii
             - --no-sort-keys
+-   repo: https://github.com/kchason/rdf-toolkit-action
+    rev: 0.1.2
+    hooks:
+    -   id: rdf-toolkit-normalizer
+        args:
+            - --autofix
