Fix unstable build direction
A follow-on patch will regenerate Make-managed files.

* https://github.com/ucoProject/UCO/issues/387
* https://github.com/ucoProject/UCO/issues/389

Signed-off-by: Alex Nelson <alexander.nelson@nist.gov>

--- a/dependencies/Makefile
+++ b/dependencies/Makefile
@@ -19,6 +19,7 @@ case_develop_ttls := \
 
 case_unstable_ttls := \
   $(wildcard CASE-unstable/ontology/*/*.ttl) \
+  $(wildcard UCO-unstable/ontology/*/*.ttl) \
   $(wildcard UCO-unstable/ontology/uco/*/*.ttl)
 
 top_srcdir := $(shell cd .. ; pwd)
