--- a/examples/illustrations/recoverability/src/README.md.in
+++ b/examples/illustrations/recoverability/src/README.md.in
@@ -10,7 +10,7 @@ These states can be represented using the `UnallocatedRecoverabilityFacet` with 
 * `metadataRecoverabilityStatus`: recovered, overwritten, unknown 
 * `contentRecoverabilityStatus`: recovered, partially recovered, overwritten, unknown
 
-This representation applies to file systems as well as “file system within a file“ data structures such as SQLite databases and Windows Registry hives.
+This representation applies to file systems as well as "file system within a file" data structures such as SQLite databases and Windows Registry hives.
 For further details and background, see [Standardization of File Recovery Classification and Authentication](https://www.nist.gov/publications/standardization-file-recovery-classification-and-authentication). Additional recoverability scenarios are available in the initial proposal [Representing Recoverability of Unallocated Files](https://caseontology.org/resources/references/Representing%20Recoverability%20of%20Unallocated%20Files%20using%20CASE%20UCO%2031Jan2018.pdf) with the caveat that examples use an early version of CASE/UCO.
 
 # File System Recoverability
@@ -50,7 +50,7 @@ Using the NIST image `dfr-01-fat.dd` of a FAT 12 file system with unallocated fi
 ```
 
 Using the [Crossover](https://caseontology.org/examples/crossover/) shared dataset, specifically the Windows computer available here: [Switch Drive](https://drive.switch.ch/index.php/s/0c7BiyQZRKOtMMq)
-The following shows a file system entry that has recoverable filename “~badquinn3@gmail.com.ost.tmp“ , but the status of associated metadata and content are unknown.
+The following shows a file system entry that has recoverable filename "~badquinn3@gmail.com.ost.tmp" , but the status of associated metadata and content are unknown.
 
 INSERT IMAGE
 
@@ -84,7 +84,7 @@ This recovered file system entry can be represented using the `observable:Unallo
 ]
 ```
 
-Again using the [Crossover](https://caseontology.org/examples/crossover/) shared dataset, the LNK file “Users/Harley Quinn/AppData/Roaming/Microsoft/Windows/Recent/Thebatplan.lnk” references a file on a USB device “D:\Thebatplan“ with associated metadata represented here, and the `contentRecoverabilityStatus` unknown:
+Again using the [Crossover](https://caseontology.org/examples/crossover/) shared dataset, the LNK file "Users/Harley Quinn/AppData/Roaming/Microsoft/Windows/Recent/Thebatplan.lnk" references a file on a USB device "D:\Thebatplan" with associated metadata represented here, and the `contentRecoverabilityStatus` unknown:
 
 ```json
 [
@@ -123,7 +123,7 @@ Again using the [Crossover](https://caseontology.org/examples/crossover/) shared
 ]
 ```
 
-Similar to a LNK file on Windows, entries in the external.db entry on the Samsung device in the Crossover shared dataset can be represented using the `observable:UnallocatedRecoverabilityFacet` with the `contentRecoverabilityStatus` unknown. For instance, the “files” table in the SQLite database “Samsung Galaxy S6 Edge / UFED File Root / USERDATA (ExtX) / Root / data / com.android.providers.media / databases / external.db” references the file IMG-20181120-WA0000.jpg:
+Similar to a LNK file on Windows, entries in the external.db entry on the Samsung device in the Crossover shared dataset can be represented using the `observable:UnallocatedRecoverabilityFacet` with the `contentRecoverabilityStatus` unknown. For instance, the "files" table in the SQLite database "Samsung Galaxy S6 Edge / UFED File Root / USERDATA (ExtX) / Root / data / com.android.providers.media / databases / external.db" references the file IMG-20181120-WA0000.jpg:
 
 ```json
 [
