--- a/examples/illustrations/recoverability/src/README.md.in
+++ b/examples/illustrations/recoverability/src/README.md.in
@@ -7,6 +7,10 @@ If you need to edit its content, edit src/README.md.in, and then re-run `make` t
 
 # Recoverability Examples
 
+*A file containing all of the JSON-LD content within this page is here: [`recoverability.json`](recoverability.json).*
+
+*A file containing draft ontology concepts is here: [`drafting.ttl`](drafting.ttl).*
+
 There is a requirement to represent the recoverability status of entries in file systems, particularly in digital forensic examinations. 
 For clarity and completeness, it is necessary to represent the recoverability of unallocated filename, metadata, and content.
 
