Add configured tool illustration to README and review chain
This patch enables construction of SHACL validation results as with
other illustrations.

The results are not yet interesting, due to lacking a context
dictionary.

A follow-on patch will generate Make-managed files.

References:
* https://github.com/ucoProject/UCO/issues/405

Signed-off-by: Alex Nelson <alexander.nelson@nist.gov>

--- a/examples/illustrations/Makefile
+++ b/examples/illustrations/Makefile
@@ -18,6 +18,7 @@ illustration_dirs := \
   accounts \
   bulk_extractor_forensic_path \
   call_log \
+  configured_tool \
   device \
   exif_data \
   file \
