Add context dictionary
A follow-on patch will generate Make-managed files.

References:
* https://github.com/ucoProject/UCO/issues/405

Signed-off-by: Alex Nelson <alexander.nelson@nist.gov>

--- a/examples/illustrations/configured_tool/configured_tool.json
+++ b/examples/illustrations/configured_tool/configured_tool.json
@@ -1,4 +1,11 @@
 {
+    "@context": {
+        "case-investigation": "https://ontology.caseontology.org/case/investigation/",
+        "kb": "http://example.org/kb/",
+        "uco-action": "https://ontology.unifiedcyberontology.org/uco/action/",
+        "uco-core": "https://ontology.unifiedcyberontology.org/uco/core/",
+        "uco-tool": "https://ontology.unifiedcyberontology.org/uco/tool/"
+    },
     "@graph": [
         {
             "@id": "kb:Tool-0b635b9f-bdb8-4492-9b4e-dec6797b82db",
