Initial commit of SQLite representation

--- a/examples/illustrations/Makefile
+++ b/examples/illustrations/Makefile
@@ -19,6 +19,7 @@ illustration_dirs := \
   bulk_extractor_forensic_path \
   call_log \
   configured_tool \
+  database_records \
   device \
   exif_data \
   file \
