--- a/examples/illustrations/recoverability/src/recoverability-sqlite_whatsapp.json
+++ b/examples/illustrations/recoverability/src/recoverability-sqlite_whatsapp.json
@@ -16,7 +16,7 @@
                 }
             },
             {
-                "@type": "drafting:UnallocatedRecoverabilityFacet",
+                "@type": "drafting:RecoveredObjectFacet",
                 "drafting:nameRecoverabilityStatus": {
                     "@type": "drafting:UnallocatedRecoverabilityStatusVocab",
                     "@value": "recovered"
